adding some fixing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <p>Anouar Bouakkez</p>
         </div>
         <div class="buttons">
-            <a href="#work">Work</a>
+            <a href="#portoflio">Work</a>
             <a href="#About">About</a>
             <a href="#Contact">Contact</a>
         </div>
@@ -21,47 +21,46 @@
                 alt="website template image">
             <h1 class="about-title">Hi, Nice to meet you!</h1>
             <p class="about-text">
-                Hello everybody. I'm Anouar Bouakkez, a free handsome bootstrap theme. A really simple theme for those wanting to showcase
-                their work with a cute and clean style.</p>
+                Hello everybody, My name is Anouar Bouakkez I'm Full stack js Developer, computer science engineering student , Training
+                responsable at Ossec and Web Instructor at GOMYCODE.</p>
 
-            <p class="about-text">Please, consider to register to our newsletter to be updated with our latest themes and freebies. Like always,
-                you can use this theme in any project freely. Share it with your friends.
+            <p class="about-text">Please make a clone to this site to validate your work with ossec (Open Source Software ENSI Club).
             </p>
         </section>
-        <section class="portoflio">
+        <section class="portoflio" id="portoflio">
             <div class="grid-item demineur">
-                <img class="img-item" src="mario.png">
+                <img class="img-item" src="res/mario.png">
                 <h6>Super Mario</h6>
             </div>
             <div class="grid-item super-mario">
-                <img class="img-item" src="demineur.png">
+                <img class="img-item" src="res/demineur.png">
                 <h6>Démineur c++</h6>
             </div>
             <div class="grid-item automate-finis">
-                <img class="img-item" src="resto.png">
+                <img class="img-item" src="res/resto.png">
                 <h6>Site web de communication instantanée</h6>
             </div>
             <div class="grid-item resto">
-                <img class="img-item" src="Automate.png">
+                <img class="img-item" src="res/Automate.png">
                 <h6>Automate d'etats finis</h6>
             </div>
             <div class="grid-item web">
-                <img class="img-item" src="rest.png">
+                <img class="img-item" src="res/rest.png">
                 <h6>Application hubride Restaurant</h6>
             </div>
             <div class="grid-item port">
-                <img class="img-item" src="java.png">
+                <img class="img-item" src="res/java.png">
                 <h6>Plugin Java</h6>
             </div>
 
         </section>
     </main>
-    <footer>
+    <footer id="About">
         <div class="col">
             <h4>My Bunker</h4>
             <ul>
                 <li> Rue de verdure 5110</li>
-                <li> 54645269</li>
+                <li> 54698547</li>
                 <li> Boumerdes ,Mahdia </li>
             </ul>
         </div>
@@ -69,23 +68,18 @@
             <h4>My Links</h4>
             <ul>
                 <li>
-                    <a href="www.facebook.com/b.anoir">Facebook</a>
+                    <a href="https://www.facebook.com/b.anoir">Facebook</a>
                 </li>
                 <li>
-                    <a href="www.twitter.com">Twiter</a>
+                    <a href="https://www.twitter.com/anouarBouakkez">Twiter</a>
                 </li>
                 <li>
-                    <a href="www.Linkedin.com">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/anouar-bouakkez/">Linkedin</a>
                 </li>
 
             </ul>
         </div>
-        <div class="col">
-            <h4>About Anouar</h4>
-            <ul>
-                <p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
-            </ul>
-        </div>
+
         <div>
         </div>
         <div>
